--- a/kdots/css/themes/glassy.less
+++ b/kdots/css/themes/glassy.less
@@ -120,4 +120,7 @@
 	  color: var(--application-header-text-color, var(--sl-color-neutral-100));
 	}
   }
+  .et2_required{
+	border-radius: var(--sl-input-border-radius-medium);
+  }
 }
